# btcink

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig
components/CalEPD/: CMakeLists.txt
main/: CMakeLists.txt  btcink_main.cpp  chunked_response.cpp  chunked_response.h  component.mk  data_grabber.cpp  data_grabber.h  disp_mgr.cpp  disp_mgr.h
